# otago_seismicity_rate_modelling

./: OtagoRangeBasinFaults.xlsx  ReadMe.md  all_catalog_comparison.m
catalogs_instrumental/: ReadMe.md  ReadMe_catalogs_instrumental.md  nz_augmented_catalog.m  nz_integrated_eq_catalog.m
catalogs_rsqsim/: ReadMe.md  ReadMe_catalogs_rsqsim.md  plot_rupture_patches.py  rsqsim_allcatalog_analysis.m  rsqsim_byfaultanalysis.m  rupture_patches.py  rupture_patches_by_fault.py
catalogs_stochastic/: ReadMe.md  ReadMe_catalogs_stochastic.md  catalog_50year_samp.m  catalog_analysis.m  catalog_analysis_byfault.m  catalog_bpt.m  catalog_poisson.m  catalog_weibull.m  fault_recurrenceparameters.m  plot_bpt_loadstate.m  plot_catalog_comparison.m  plot_emptycounts.m  plot_intertimes.m  plot_recurrence_models.m
gis_files/: NZ_CFM_v1_0.dbf  NZ_CFM_v1_0.shp.xml  nz-coastline-polygon1.dbf  nz-coastline-polygon1.shx  nz-coastline-polygon_nztm.dbf  nz-coastline-polygon_nztm.qmd  nz-coastline-polygon_nztm.shx  orb_area_polygon.dbf  orb_area_polygon.geojson  orb_area_polygon.qmd  orb_area_polygon.shp  orb_area_polygon.shx
nshm_geodeticrates/: ReadMe.md  extract_otago_sections.py
nshm_inversion/solvis/: ReadMe.md  nshm_logictreebranch_lookuptable.txt  pyproject.toml
nshm_inversion/solvis/OtagoFaults/: ReadMe.md
nshm_inversion/solvis/OtagoFaults/rupture_surfaces/: ReadMe.md
nshm_inversion/solvis/WORK/: ReadMe.md
nshm_inversion/solvis/scripts/: combine_branches.py  get_fault_rupture_patches.py  get_rupture_traces.py  get_section_area.py  select_ruptures_by_polygon.py
(+32 files in other folders)
