[tool.poetry]
name="otago-srm"
package-mode = false
description = "analysis of opensha modular solution files."
license = "AGPL3"
readme = "ReadMe.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
solvis = {git = "https://github.com/GNS-Science/solvis.git", rev = "1cbdb91075b96a0b4bd2ab384d0ba9c70894b417"}
gdal = "3.8"
nzshm-model = "^0.10.6"
pyproj = "^3.7"
shapely = "^2.0.6"
numpy = "^2.2"
pandas = "^2.2.3"
geopandas = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
