[tool.poetry]
name="otago-srm"
package-mode = false
description = "analysis of opensha modular solution files."
license = "AGPL3"
readme = "ReadMe.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gdal = "3.8"
pyproj = "^3.7"
shapely = "^2.0.6"
numpy = "^2.2"
pandas = "^2.2.3"
geopandas = "^1.0.1"
nzshm-model = "^0.13.6"
solvis = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
